fix: z-index of default header

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -210,6 +210,7 @@ margin-top: 14rem;
   position: fixed;
   width: 100%;
   transition: all 0.5s ease;
+  z-index:10;
 }
 
 .headerScroll {
